# kasra-mcp

./: CONTRIBUTING.md  README.md  claude_desktop_config.example.json  pyproject.toml  setup.cfg
skills/kasra-code-review/: SKILL.md
src/kasra_mcp/: __init__.py  server.py
src/kasra_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
system-test/: coverage-perspectives.md
system-test/iac-tests/ansible/: playbook-insecure.yml
system-test/iac-tests/cloudformation/: lambda-outside-vpc.yaml  s3-public.yaml
system-test/iac-tests/docker/: Dockerfile_insecure  Dockerfile_no_healthcheck  Dockerfile_no_user  Dockerfile_user_root  docker-compose-exposed-db.yml  docker-compose-insecure.yml  docker-compose-privileged.yml
system-test/iac-tests/helm/: values-insecure.yaml
system-test/iac-tests/kubernetes/: deployment-privileged.yaml  helm-chart-values.yaml  helm-template-privileged.yaml  networkpolicy-missing.yaml  pod-privileged.yaml  rbac-authenticated.yaml  rbac-wildcard.yaml  secret-configmap-insecure.yaml  service-nodeport.yaml
system-test/iac-tests/pulumi/: Pulumi-insecure.yaml
system-test/iac-tests/serverless/: lambda_env_vars.py  serverless-insecure.yml
system-test/iac-tests/terraform/: backend_local.tf  iam_wildcard.tf  s3_public.tf  s3_public_read_write.tf  security_group_mongodb.tf  security_group_open.tf
system-test/sec-tests/c/: sec_49_memory_safety.c
system-test/sec-tests/html/: sec_15_xss.html  sec_17_csrf.html  sec_26_missing_headers.html  sec_41_sri_missing.html  sec_48_clickjacking.html
(+209 files in other folders)
