[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kasra-mcp"
version = "0.1.0"
description = "Kasra MCP Server — local code review via Model Context Protocol"
readme = "README.md"
license = { text = "Proprietary — Internal Use Only" }
authors = [
    { name = "Kasra AI Security", email = "dev@kasra.security" },
]
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.6.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
]

[project.scripts]
kasra-mcp = "kasra_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]
